Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,7 @@ steps:
 - task: CopyFiles@2
   inputs:
     contents: |
-      '**\build\**'
+      '**/build/**'
       firebase.json
     targetFolder: $(Build.ArtifactStagingDirectory)
 
