--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@types/jest": "^24.0.6",
     "@types/node": "^11.9.5",
     "@types/react": "^16.8.4",
+    "@types/react-router-dom": "^4.3.1",
     "@types/react-select": "^2.0.13",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "react-select": "^2.4.1",
     "typescript": "^3.3.3333"
@@ -30,6 +32,7 @@
   ],
   "devDependencies": {
     "@types/react-dom": "^16.8.2",
+    "firebase": "^5.8.6",
     "prettier": "1.16.4"
   }
 }
