--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test:ci": "react-scripts test --env=jsdom --reporters=default --reporters=jest-junit --coverage"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -33,6 +34,21 @@
   "devDependencies": {
     "@types/react-dom": "^16.8.2",
     "firebase": "^5.8.6",
+    "jest-junit": "^6.3.0",
     "prettier": "1.16.4"
+  },
+  "jest": {
+    "coverageReporters": [
+      "cobertura",
+      "html"
+    ]
+  },
+  "jest-junit": {
+    "suiteName": "jest tests",
+    "output": "test/junit.xml",
+    "classNameTemplate": "{classname} - {title}",
+    "titleTemplate": "{classname} - {title}",
+    "ancestorSeparator": " > ",
+    "usePathForSuiteName": "true"
   }
 }
