--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,22 @@ steps:
     npm run build
   displayName: 'npm install and build'
 
+- script: npm test
+
+- task: PublishTestResults@2
+  condition: succeededOrFailed()
+  inputs:
+    testRunner: JUnit
+    testResultsFiles: 'test/junit.xml'
+  displayName: 'Publish test results'
+
+- task: PublishCodeCoverageResults@1
+  inputs: 
+    codeCoverageTool: Cobertura
+    summaryFileLocation: '$(System.DefaultWorkingDirectory)/coverage/'
+    reportDirectory: '$(System.DefaultWorkingDirectory)/coverage/cobertura-coverage.xml'
+  displayName: 'Publish code coverage results'
+
 - task: CopyFiles@2
   inputs:
     contents: |
