--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,8 @@ steps:
     npm run build
   displayName: 'npm install and build'
 
-- script: npm test
+- script: npm run test:ci
+  displayName: "Run tests"
 
 - task: PublishTestResults@2
   condition: succeededOrFailed()
