Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,7 @@ steps:
 - script: |
     npm install
     npm run build
-  displayName: 'npm install and build'
+  displayName: 'Build'
 
 - script: npm run test:ci
   displayName: "Run tests"
@@ -33,8 +33,8 @@ steps:
 - task: PublishCodeCoverageResults@1
   inputs: 
     codeCoverageTool: Cobertura
-    summaryFileLocation: '$(System.DefaultWorkingDirectory)/coverage/'
-    reportDirectory: '$(System.DefaultWorkingDirectory)/coverage/cobertura-coverage.xml'
+    summaryFileLocation: '$(System.DefaultWorkingDirectory)/coverage/cobertura-coverage.xml'
+    reportDirectory: '$(System.DefaultWorkingDirectory)/coverage/'
   displayName: 'Publish code coverage results'
 
 - task: CopyFiles@2
@@ -43,6 +43,7 @@ steps:
       **/build/**
       firebase.json
     targetFolder: $(Build.ArtifactStagingDirectory)
+  displayName: 'Copy build artifacts'
 
 - task: PublishBuildArtifacts@1
-  displayName: 'Publish Artifact'
+  displayName: 'Publish build artifacts'
