--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "react-select": "^2.4.1",
-    "typescript": "^3.3.3333"
+    "typescript": "^3.3.3333",
+    "vsts-coverage-styles": "^1.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "test:ci": "react-scripts test --env=jsdom --reporters=default --reporters=jest-junit --coverage"
+    "test:ci": "react-scripts test --env=jsdom --reporters=default --reporters=jest-junit --coverage",
+    "posttest": "node ./tools/inline-code-coverage.js"
   },
   "eslintConfig": {
     "extends": "react-app"
