--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,9 +15,10 @@ steps:
     versionSpec: '8.x'
   displayName: 'Install Node.js'
 
-- script: |
-    npm install
-    npm run build
+- script: npm install
+  displayName: 'Install npm packages'
+
+- script: npm run build
   displayName: 'Build'
 
 - script: |
