--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.5",
+    "react-scripts": "3.4.1",
     "react-select": "^2.4.1",
     "typescript": "^3.3.3333",
     "vsts-coverage-styles": "^1.0.7"
@@ -35,7 +35,7 @@
   ],
   "devDependencies": {
     "@types/react-dom": "^16.8.2",
-    "firebase": "^5.8.6",
+    "firebase": "7.14.0",
     "jest-junit": "^6.3.0",
     "prettier": "1.16.4"
   },
